--- a/Proyecto API/Views/Home/Index.cshtml
+++ b/Proyecto API/Views/Home/Index.cshtml
@@ -1,24 +1,25 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h4 class="text-muted">APIs ASSET MANAGEMENT</h4>
+    <p class="text-muted" style="font-size: 15px">APIs ASSET MANAGEMENT is a group of end points created to manage all the required information related to fixed assets in all sizes companies, the logic is based on the main requirements established in Costa Rica Law, International Accounting Principles and Free Trade Zone regulations for international companies</p>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <h2>Manage Classes</h2>
+        <p>Our endpoints help you to manage your assets based on classes categorizations, allowing you to be in compliance with Free Trade Zones regulations, the cualitative and cuantitative information of the asset will be based and populated on the class and its characteristics</p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+        <h2>Manage Locations</h2>
+        <p>To be in compliance with internal controls and Free Trade Zone regulations, our end points help you to manage the location and the state of your asset since the moment it is in your cellars</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <h2>Manage Depreciation</h2>
+        <p>Our end points will help you to execute the depreciation of your assets easily, in addition, the logic will generate the recognition and depreciation journal, based on the accounts configuration of the asset class. </p>
+    </div>
+</div>
+<div class="row" style="margin-top: 25px">
+    <div class="col-md-12">
+        <div class="jumbotron">
+            Our end points are being sell together with our ASSET MANAGEMENT Application, contact sales for more information.
+        </div>
     </div>
 </div>
